Styles/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
html {
    font-size: 62.5%;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

* {
    box-sizing: border-box;
}

body {
    background-color: #8FFF55;
    color: #050709;
}
a {
    display: inline-block;
    text-decoration: none;
    color: #050709;
}


/* Header Styles */

header {
    display: flex;
    align-items: flex-end;
    margin: 2% 0;
    /* border: 2px solid black; */
}
header img{
    width: 15%;
    margin: 0 1%;
}
header h1 {
    font-size: 2.7rem;
    /* border: 2px solid black; */
    width: 65%;
}
header nav {
    /* border: 2px solid black; */
    display: flex;
    justify-content: space-around;
    width: 20%;
}
header nav a {
    font-size: 2rem;
    text-align: center;
    border: 2px solid black;
    background-color: #bb671c;
    padding: .5% 2%;
    border-radius: 5px;
}

/* Landing img Styles */

.landing-img {
    width: 100%;
    background-image: url("../Assets/Field\ of\ Weed.jpg");
    background-repeat: no-repeat;
    background-position: center;
    height: 50vh;
}

/* Information section styles */

.information {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
}
.information div {
    width: 45%;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #48B72A;
    padding: 2% 0;
    /* border: 2px solid black; */
}
.information div:first-child {
    border-bottom: 2px solid black;
    border-right: 2px solid black;
}
.information div:nth-child(2) {
    border-bottom: 2px solid black;
}
.information div:nth-child(3) {
    border-right: 2px solid black;;
}
.information div img {
    width: 50%;
    height: 30vh;
    margin-bottom: 3%;
}
.information p {
    font-size: 2rem;
    text-align: center;
    padding: 0 1%;
}

/* More information section styling */

.more-information {
    width: 98%;
    margin: 2% auto;
    padding: 1%;
    border: 2px solid #551700;
    background-color: #48B72A;
}
.more-information p {
    font-size: 2rem;
}

/* Footer styling */

footer p {
    text-align: center;
}
footer .copy {
    font-size: 1.8rem;
    margin: 5%;
}
footer .footer-info {
    display: flex;
    justify-content: space-around;
    /* border: 2px solid red; */
}
footer .footer-info div {
    width: 30%;
    border: 2px solid black;
    border-radius: 5px;
    font-size: 2rem;
    padding: 1%;
    background-color: #48B72A;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
footer .footer-info div h2 {
    font-size: 2.2rem;
    margin-bottom: 3%;
    text-align: center;
    color: #9a12b3;
}
footer .contact p{
    margin: 11% 0;
}
footer .mission p {
    margin-top: 4%;
}
footer a {
    font-size: 2rem;
    text-align: center;
    border: 2px solid black;
    background-color: #e07148;
    padding: .5% 2%;
    border-radius: 5px;
}

